--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-images-upload": "^1.2.7",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "simplebar": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
